# packages/backend/models/PedidoModel.js
@@ -1,11 +1,12 @@
 import mongoose from "mongoose";
 
 const ItemPedidoSchema = new mongoose.Schema({
+  //productoId: { type: String,  // TODO: es un String hasta que se persistan productos (que va a ser un ObjectId)required: true },
   productoId: { 
-    type: String,  // TODO: es un String hasta que se persistan productos (que va a ser un ObjectId)
+    type: mongoose.Schema.Types.ObjectId, 
+    ref: "Producto", 
     required: true 
   },
-  // productoId: { type: mongoose.Schema.Types.ObjectId, ref: "Producto", required: true },
   cantidad: { 
     type: Number, 
     required: true 
